<resources>
    <string name="app_name">DefinitiveLogin</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="telefono">Telefono</string>
    <string name="nombre">Nombre</string>
    <string name="contrasenia">Contraseña</string>
    <string name="signup">SIGN UP</string>
    <string name="cancel">CANCEL</string>
</resources>